# mymd

.claude/: CLAUDE.md  README-OPENCODE.md
.claude/.claude/: EVOLUTION.md
.claude/.claude/feedback/: FEEDBACK-INDEX.md
.claude/hooks/: auto-push.sh  check-evolution.sh  detect-feedback-signal.sh  mark-review-needed.sh  pre-commit-check.sh  stop-gate.sh
.claude/projects/template/: PROJECT_STATE.md
.claude/skills/bug-fixer/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/design-brief-builder/: SKILL.md
.claude/skills/design-maker/: SKILL.md
.claude/skills/dev-builder/: SKILL.md
.claude/skills/dev-planner/: SKILL.md
.claude/skills/product-spec-builder/: SKILL.md
.claude/skills/release-builder/: SKILL.md
.claude/subagents/code-reviewer/: SUBAGENT.md
.claude/subagents/evolution-runner/: SUBAGENT.md
.claude/subagents/feedback-observer/: SUBAGENT.md
.claude/subagents/implementer/: SUBAGENT.md
projects/md-editor/: DESIGN-BRIEF.md  DEV-PLAN.md  PRODUCT-SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js
projects/md-editor/design/: UI设计  index.html
projects/md-editor/docs/: BUILD.md  CROSS-PLATFORM.md  PERFORMANCE.md
projects/md-editor/src/: App.tsx
projects/md-editor/src-tauri/: Cargo.toml  tauri.conf.json
projects/md-editor/src-tauri/src/: commands.rs  lib.rs  main.rs
projects/md-editor/src/components/: MermaidRenderer.tsx  ThemeProvider.tsx
projects/md-editor/src/lib/: autosave.ts
projects/md-editor/src/stores/: editorStore.ts  fileStore.ts  index.ts  settingsStore.ts
(+24 files in other folders)
